# inteli

ENG-COMP-M9/P01-04/: go.mod
analysis_automation/: .gitignore  README.md  package-lock.json  package.json  requirements.txt  start.sh
ativ01-m7/: Dockerfile  README.md  requirements.txt
ativ01-m7/src/: app.py
ativ03-m7/: Makefile  README.md  docker-compose.yml
ativ03-m7/notex/: .env.tmpl  .gitignore  Cargo.toml  Dockerfile  README.md
ativ03-m7/notex/src/: main.rs
ativ03-m7/notex_frontend/: .gitignore  Dockerfile
ativ2-m8/: README.md  mapping_bash.sh  mapping_zsh.sh  navigation_bash.sh  navigation_zsh.sh
ativ2-m8/assets/: map.yaml
ativ3-m6/: .gitignore  README.md
ativ3-m6/backend/: backend_controller.py  requirements.txt
ativ3-m6/embedded/: embedded_controller.py  requirements.txt
ativ3-m8/: README.md  packages.txt
ativ3-m8/assets/: map.pgm  map.yaml
ativ4-m6/: .env.tmpl  Makefile  README.md  requirements.txt
ativ4-m6/src/: app.py
ativ4-m7/: Dockerfile  Modelo.pkl  README.md  app.py  requirements.txt
ativ4-m7/etl/: Exploracao_dados.ipynb
ativ4-m7/templates/: index.html
ativ4-m8/: Dockerfile  app.py  modelfile  requirements.txt
ativ5-m7/: README.md
ativ5-m7/backend/: .env.tmpl  (+5 more)
ativ5-m8/: README.md  main.py  requirements.txt
ativ6-m7/: README.md
ativ6-m8/: README.md  main.py  requirements.txt
ativ7-m8/: main.py
ativ8-m8/: README.md  ativ8_m8.ipynb
desafio/: README.md
dobot-automation/: README.md  requirements.txt
foundry-moken/: Makefile  remappings.txt
hipercongo/: go.mod
prova1-m7/: README.md  docker-compose.yml
(+166 files in other folders)
